# flask-simple-api

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
docs/wiki/: phase01.md
src/flask_simple_api/: __init__.py  __main__.py  routes.py
src/flask_simple_api/api/: hello.py  routes.py  time.py
src/flask_simple_api/home/: routes.py
tests/: test_factory.py  test_home_route.py
